# tasks

./: .gitignore
.github/workflows/: api.yml
services/tasks_api/: main.py  pyproject.toml  serverless.yml
