[tool.poetry]
name = "tasks-api"
version = "0.1.0"
description = ""
authors = ["DanDiggas"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
httpx = "^0.27.0"
mangum = "^0.17.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
bandit = "^1.7.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
